Change files name

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p style=" font-size: 35px; line-height: 27px; margin-top: 30px; ">
             عنوان ارائه:</p>
         <p id="subject"><br>مقدمه‌ای بر <span style="color: #c69; font-family: 'vazirb';">Tor</span></p>
-        <img src="css/qt.png" class="image">
+        <img src="css/main-pic.png" class="image">
 
         <div class="init_page">
 
@@ -105,14 +105,14 @@
     <div id="its" class="step slide padd" data-x="-5500" data-y="3500" data-rotate="90" data-scale="6">
         <img src="./images/Tor_logo.png" style="float: left;margin-top:20px; width:15%">
         <h6 style="margin:40px 0 0 10px; font-size: 45px; color: #555;">سرویس Tor چگونه کار می‌کند؟</h6>
-        <img src="./css/how-tor-works21.jpg"
+        <img src="./css/how-tor-works.jpg"
              style="width:87%;float:left;margin-left:65px;margin-top:35px;border-radius:5%;">
         <p class="num" style="margin: 500px 30px 15px 0;">۲</p>
     </div>
 
     <div class="step slide type " data-x="2550" data-y="4850" data-z="-3000" data-rotate="180" data-scale="6">
         <div style="position: absolute; top: 25px; right: 20px;">
-            <img src="./css/Asymmetric_encryption_(colored).png" style="float: left; width:15%;margin-left:20px;">
+            <img src="./css/Asymmetric_encryption.png" style="float: left; width:15%;margin-left:20px;">
             <h1 style="font-size: 40px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0); margin: 20px 20px 0 0; color: #555; float: right; color: #555;">
                 رمزنگاری دو کلیده؟</h1>
         </div>
@@ -121,7 +121,7 @@
 
     <div class="step slide type1 " data-x="12550" data-y="8850" data-z="-1000" data-rotate="90" data-scale="6">
         <div style="position: absolute; top: 25px; right: 20px;">
-            <img src="./css/Asymmetric_encryption_(colored).png" style="float: left; width:15%;margin-left:20px;">
+            <img src="./css/Asymmetric_encryption.png" style="float: left; width:15%;margin-left:20px;">
             <h1 style="font-size: 40px; text-shadow: 2px 2px 4px rgba(0, 0, 0, 0); margin: 20px 20px 0 0; color: #555; float: right; color: #555;">
                 شیوه استفاده رمزنگاری دو کلیده در Tor</h1>
         </div>
@@ -277,7 +277,7 @@
             علت ناشناس بودن و امن بودن شبکه‌ی Tor برخی افراد از آن به منظور کارهای غیرقانونی استفاده می‌کنند به همین جهت این
             سرویس به نام دارک وب هم شناخته می‌شود.
         </p>
-        <img src="./css/dark-web-vs-surface-web-vs-deep-web-1024x412.png"
+        <img src="./css/dark-web-vs-surface-web-vs-deep-web.png"
              style="width:78%;float: left;margin-top:10px;margin-left:100px;">
         <p class="num" style="margin: 500px 30px 100px 0;">۷</p>
         </ol>
