--- a/index.html
+++ b/index.html
@@ -3265,91 +3265,91 @@
     <!--    </div>-->
 
 
-    <div class="step slide oposit-text" data-x="-5300" data-y="-10000" data-rotate="1100" data-scale="2">
-        <img src="./images/Tor_logo.png" style="float: left;width:15%">
-        <h1 style="margin:30px 10px 10px 10px; color: #555; font-size: 38px;">نحوه‌ی استفاده از سرویس Tor</h1>
-        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">
-            <i
-                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">
-            </i>
-            Tor browser
-        </h4>
-        <p style="line-height: 1.5; font-size: 25px;">
-            <i class="ion-arrow-left-c"
-               style="font-size: 25px; color: #c69; margin-left: 10px;">
-            </i>مرورگر
-            اختصاصی Tor برای کاربران کامپیوتر
-        </p>
-        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">
-            <i
-                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">
-            </i>Orbot(android)
-        </h4>
-        <p style="line-height: 1.5; font-size: 25px;">
-            <i class="ion-arrow-left-c"
-               style="font-size: 25px; color: #c69; margin-left: 10px;">
-            </i>
-            کلاینت اختصاصی Tor برای کاربران اندروید
-        </p>
-        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">
-            <i
-                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">
-            </i>Orfox(android)
-        </h4>
-        <p style="line-height: 1.5; font-size: 25px;">
-            <i class="ion-arrow-left-c"
-               style="font-size: 25px; color: #c69; margin-left: 10px;">
-            </i>مرورگر
-            اختصاصی Tor برای کاربران اندروید
-        </p>
-        <br/>
-        <p>دانلود:
-            <a href="https://guardianproject.info/apps/" style="background-color: transparent; color: rgb(3, 96, 188);">
-                /https://guardianproject.info/apps
-            </a>
-        </p>
-        <br/>
-        <p class="num" style="margin: 500px 30px 100px 0;">۸</p>
-        </ol>
-    </div>
-    <div class="step slide" style="padding-left:100px;" data-x="-10000" data-y="-1500">
-        <h1 style="margin:35px 50px 10px 10px; color: #555; font-size: 38px;">منابع</h1>
-        <div style="float:left;direction: ltr; line-height: 1.6; font-size: 26px; margin-right: 5%;">
-            <br/>
-            <br/>
-            <a href="https://en.wikipedia.org/wiki/Onion_routing"
-               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://en.wikipedia.org/wiki/Onion_routing</a>
-            <br/>
-            <br/>
-            <a href="https://molaei.org/tor-hidden-services/"
-               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://molaei.org/tor-hidden-services</a>
-            <br/>
-            <br/>
-            <a href="https://2019.www.torproject.org/docs/documentation.html.en"
-               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://2019.www.torproject.org/docs/documentation.html.en</a>
-            <br/>
-            <br/>
-            <a href="https://2019.www.torproject.org/docs/faq.html.en"
-               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://2019.www.torproject.org/docs/faq.html.en</a>
-        </div>
-        <div style="direction: rtl; position:absolute; bottom:50px; right:50px;font-size: 25px; color: #555; line-height: 0.5; ">
-            <a href="https://github.com/Alireza-Sampour/Tor-presentation" style="background-color: #f4f6f7;"><i
-                    class="ion-social-github"
-                    style="font-size: 33px;"></i> available on
-                Github </a>
-        </div>
+<!--    <div class="step slide oposit-text" data-x="-5300" data-y="-10000" data-rotate="1100" data-scale="2">-->
+<!--        <img src="./images/Tor_logo.png" style="float: left;width:15%">-->
+<!--        <h1 style="margin:30px 10px 10px 10px; color: #555; font-size: 38px;">نحوه‌ی استفاده از سرویس Tor</h1>-->
+<!--        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">-->
+<!--            <i-->
+<!--                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">-->
+<!--            </i>-->
+<!--            Tor browser-->
+<!--        </h4>-->
+<!--        <p style="line-height: 1.5; font-size: 25px;">-->
+<!--            <i class="ion-arrow-left-c"-->
+<!--               style="font-size: 25px; color: #c69; margin-left: 10px;">-->
+<!--            </i>مرورگر-->
+<!--            اختصاصی Tor برای کاربران کامپیوتر-->
+<!--        </p>-->
+<!--        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">-->
+<!--            <i-->
+<!--                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">-->
+<!--            </i>Orbot(android)-->
+<!--        </h4>-->
+<!--        <p style="line-height: 1.5; font-size: 25px;">-->
+<!--            <i class="ion-arrow-left-c"-->
+<!--               style="font-size: 25px; color: #c69; margin-left: 10px;">-->
+<!--            </i>-->
+<!--            کلاینت اختصاصی Tor برای کاربران اندروید-->
+<!--        </p>-->
+<!--        <h4 style="margin-top: 30px; line-height: 2; font-size: 28px; line-height: 3;">-->
+<!--            <i-->
+<!--                    class="ion-android-checkbox-blank" style="font-size: 30px; color:#6a6a6a; margin-left: 10px;">-->
+<!--            </i>Orfox(android)-->
+<!--        </h4>-->
+<!--        <p style="line-height: 1.5; font-size: 25px;">-->
+<!--            <i class="ion-arrow-left-c"-->
+<!--               style="font-size: 25px; color: #c69; margin-left: 10px;">-->
+<!--            </i>مرورگر-->
+<!--            اختصاصی Tor برای کاربران اندروید-->
+<!--        </p>-->
+<!--        <br/>-->
+<!--        <p>دانلود:-->
+<!--            <a href="https://guardianproject.info/apps/" style="background-color: transparent; color: rgb(3, 96, 188);">-->
+<!--                /https://guardianproject.info/apps-->
+<!--            </a>-->
+<!--        </p>-->
+<!--        <br/>-->
+<!--        <p class="num" style="margin: 500px 30px 100px 0;">۸</p>-->
+<!--        </ol>-->
+<!--    </div>-->
+<!--    <div class="step slide" style="padding-left:100px;" data-x="-10000" data-y="-1500">-->
+<!--        <h1 style="margin:35px 50px 10px 10px; color: #555; font-size: 38px;">منابع</h1>-->
+<!--        <div style="float:left;direction: ltr; line-height: 1.6; font-size: 26px; margin-right: 5%;">-->
+<!--            <br/>-->
+<!--            <br/>-->
+<!--            <a href="https://en.wikipedia.org/wiki/Onion_routing"-->
+<!--               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://en.wikipedia.org/wiki/Onion_routing</a>-->
+<!--            <br/>-->
+<!--            <br/>-->
+<!--            <a href="https://molaei.org/tor-hidden-services/"-->
+<!--               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://molaei.org/tor-hidden-services</a>-->
+<!--            <br/>-->
+<!--            <br/>-->
+<!--            <a href="https://2019.www.torproject.org/docs/documentation.html.en"-->
+<!--               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://2019.www.torproject.org/docs/documentation.html.en</a>-->
+<!--            <br/>-->
+<!--            <br/>-->
+<!--            <a href="https://2019.www.torproject.org/docs/faq.html.en"-->
+<!--               style=" color: rgb(3, 96, 188);  margin-top: 50px; background-color: #f4f6f7;">https://2019.www.torproject.org/docs/faq.html.en</a>-->
+<!--        </div>-->
+<!--        <div style="direction: rtl; position:absolute; bottom:50px; right:50px;font-size: 25px; color: #555; line-height: 0.5; ">-->
+<!--            <a href="https://github.com/Alireza-Sampour/Tor-presentation" style="background-color: #f4f6f7;"><i-->
+<!--                    class="ion-social-github"-->
+<!--                    style="font-size: 33px;"></i> available on-->
+<!--                Github </a>-->
+<!--        </div>-->
 
 
-    </div>
+<!--    </div>-->
 
-    <div class="step slide oposit-text" data-x="-15000" data-y="-4000" data-rotate="90" data-scale="6">
+<!--    <div class="step slide oposit-text" data-x="-15000" data-y="-4000" data-rotate="90" data-scale="6">-->
 
-        <p style="text-align: center; direction: ltr; line-height: 2.5; color: rgb(25, 118, 210); font-size: 100px; margin-top: 40px;">
-            Any Question?
-            <br><img src="./images/Tor_logo.png" style="width: 300px;">
+<!--        <p style="text-align: center; direction: ltr; line-height: 2.5; color: rgb(25, 118, 210); font-size: 100px; margin-top: 40px;">-->
+<!--            Any Question?-->
+<!--            <br><img src="./images/Tor_logo.png" style="width: 300px;">-->
 
-        </p>
-    </div>
+<!--        </p>-->
+<!--    </div>-->
 
 
     <div id="overview" class="step" data-x="3000" data-y="1500" data-scale="80"></div>
