--- a/index.html
+++ b/index.html
@@ -352,9 +352,18 @@
             </div>
             </p>
         </div>
-        <div style="float:right;margin-right: 50%; margin-top: 5%;">
+        <div style="margin-right: 55%; margin-top: 0%; width: 0%;">
             <img src="images/6.1.png">
         </div>
+        <div style="margin-right: 47%; margin-top:-20%; width: 0;">
+            <img src="images/11.png">
+        </div>
+        <div style="margin-top:-17%; width: 40%;">
+            <img src="images/11.1.png">
+        </div>
+        <p style="margin-right: 35%; margin-top: 3%;">
+            (A (F (E (D (BC)))))
+        </p>
     </div>
     <!--q1-->
 
@@ -837,7 +846,8 @@
             سوال سوم:
         </p>
         <p class="dec">
-            با استفاده از برنامه نویسی پویا در کوله پشتی با ظرفیت W = 5 اشیا را طوری قرار دهید که ارزش اشیا داخل
+            با استفاده از برنامه نویسی پویا در کوله پشتی صفر و یک با ظرفیت W = 5 اشیا را طوری قرار دهید که ارزش اشیا
+            داخل
             کوله
             پشتی حداکثر شود.
         <p/>
@@ -885,6 +895,19 @@
             <img src="images/8.png">
         </div>
     </div>
+    <div class="step slide type1 " data-x="15550" data-y="10500" data-z="-1000" data-rotate="90" data-scale="6">
+        <div class="dec">
+            <p style="float: left; direction: ltr;">
+            <div style="line-height:3.7; margin-right: 20%; margin-top: 20%;">
+                <img src="images/12.png">
+            </div>
+            </p>
+        </div>
+        <p style="margin-right: 35%;margin-top: 10%; width: 60%;">
+            سود بهینه برابر با 7 است
+        </p>
+    </div>
+
     <!--q3-->
 
     <!--q4-->
@@ -1047,7 +1070,7 @@
     <div class="step slide padd" data-x="-5500" data-y="10500" data-rotate="90" data-scale="6">
         <div style="margin-right: -2%; margin-top: -3%;">
             <video width="800" height="650" controls>
-                <source src="images/favicon.png.webm" type="video/mp4">
+                <source src="images/huffman.webm" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
