change type in index.html for huffman slide

--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
     </div>
     <div class="step slide padd" data-x="-5500" data-y="17500" data-rotate="90" data-scale="6">
         <p style="margin-top: 8%;margin-right: 5%;">
-            جدول نهایی:
+            جدول نهایی و کدهای بهینه‌ی دودویی:
         </p>
         <div dir="ltr" style="float:right;margin-top: 15%; margin-right: -3%;">
             <table class="tg1">
